--- a/.github/workflows/backend-rollback-main.yml
+++ b/.github/workflows/backend-rollback-main.yml
@@ -15,13 +15,12 @@ jobs:
   rollback:
     runs-on: [ self-hosted, production ]
     steps:
-      #      TODO: main 브랜치로 변경
-      - name: Ensure chore/356 branch
+      - name: Ensure main branch
         shell: bash
         run: |
           CURRENT_BRANCH="${GITHUB_REF#refs/heads/}"
-          if [ "$CURRENT_BRANCH" != "chore/356" ]; then
-            echo "This workflow can only run on chore/356 branch."
+          if [ "$CURRENT_BRANCH" != "main" ]; then
+            echo "This workflow can only run on main branch."
             exit 1
           fi
       - name: Login to Docker Hub
