chore: 테스트용 임시 워크플로우 설정

--- a/.github/workflows/backend-dev.yml
+++ b/.github/workflows/backend-dev.yml
@@ -2,7 +2,7 @@ name: YaguBogu Backend Dev
 
 on:
   push:
-    branches: [ "dev" ]
+    branches: [ "chore/382" ]
     paths:
       - "backend/**"
   workflow_dispatch:
