--- a/.github/workflows/backend-dev.yml
+++ b/.github/workflows/backend-dev.yml
@@ -60,7 +60,7 @@ jobs:
     runs-on: [ self-hosted, develop ]
     env:
       IMAGE: yagubogu/yagubogu-backend
-      TAG: dev-${{ github.sha }}
+      TAG: "dev-latest"
     steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v3.3.0
