--- a/.github/workflows/backend-dev.yml
+++ b/.github/workflows/backend-dev.yml
@@ -2,7 +2,7 @@ name: YaguBogu Backend Dev
 
 on:
   push:
-    branches: [ "dev" ]
+    branches: [ "chore/382" ]
     paths:
       - "backend/**"
   workflow_dispatch:
@@ -46,13 +46,11 @@ jobs:
 
       - name: Docker Image Build & Push (multi-arch)
         run: |
-          TAG_SHA="dev-${{ github.sha }}"
           TAG_LATEST="dev-latest"
           # Dockerfile 경로: backend/Dockerfile
           docker buildx build \
             -f Dockerfile \
             --platform linux/arm64 \
-            -t $IMAGE:$TAG_SHA \
             -t $IMAGE:$TAG_LATEST \
             --push \
             .
@@ -62,7 +60,7 @@ jobs:
     runs-on: [ self-hosted, develop ]
     env:
       IMAGE: yagubogu/yagubogu-backend
-      TAG: dev-${{ github.sha }}
+      TAG: "dev-latest"
     steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v3.3.0
