chore: OSS 라이선스 activity 테마 충돌 방지 속성 추가

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -41,13 +41,15 @@
         <activity
             android:name=".presentation.MainActivity"
             android:exported="false" />
-        <activity
-            android:name="com.google.android.gms.oss.licenses.OssLicensesMenuActivity"
-            android:theme="@style/Theme.YaguBogu.OssLicenseTheme" />
 
         <activity
+            android:name="com.google.android.gms.oss.licenses.OssLicensesMenuActivity"
+            android:theme="@style/Theme.YaguBogu.OssLicenseTheme"
+            tools:replace="android:theme" />
+        <activity
             android:name="com.google.android.gms.oss.licenses.OssLicensesActivity"
-            android:theme="@style/Theme.YaguBogu.OssLicenseTheme" />
+            android:theme="@style/Theme.YaguBogu.OssLicenseTheme"
+            tools:replace="android:theme" />
     </application>
 
 </manifest>
