fix: 변수명 수정

--- a/.github/workflows/backend-dev.yml
+++ b/.github/workflows/backend-dev.yml
@@ -2,7 +2,7 @@ name: YaguBogu Backend Dev
 
 on:
   push:
-    branches: [ "chore/382" ]
+    branches: [ "dev" ]
     paths:
       - "backend/**"
   workflow_dispatch:
