chore: 코드에 역슬래시 추가

--- a/.github/workflows/backend-dev.yml
+++ b/.github/workflows/backend-dev.yml
@@ -49,8 +49,8 @@ jobs:
           TAG_LATEST="dev-latest"
           # Dockerfile 경로: backend/Dockerfile
           docker buildx build \
-          --cache-to=type=registry,ref=$IMAGE:build-cache,mode=max
-          --cache-from=type=registry,ref=$IMAGE:build-cache
+          --cache-to=type=registry,ref=$IMAGE:build-cache,mode=max \
+          --cache-from=type=registry,ref=$IMAGE:build-cache \
           -f Dockerfile \
           --platform linux/arm64 \
           -t $IMAGE:$TAG_LATEST \
