chore: 아키텍처 multi -> arm64 변경

--- a/.github/workflows/backend-dev.yml
+++ b/.github/workflows/backend-dev.yml
@@ -44,7 +44,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_DEPLOY_USERNAME }}
           password: ${{ secrets.DOCKERHUB_DEPLOY_TOKEN }}
 
-      - name: Docker Image Build & Push (multi-arch)
+      - name: Docker Image Build & Push (arm64-arch)
         run: |
           TAG_LATEST="dev-latest"
           # Dockerfile 경로: backend/Dockerfile
