--- a/backend/src/test/resources/application-e2e.yml
+++ b/backend/src/test/resources/application-e2e.yml
@@ -1,7 +1,13 @@
 spring:
-  profiles:
-    active: local
+  sql:
+    init:
+      mode: never
   jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        dialect: org.hibernate.dialect.MySQLDialect
     hibernate:
       ddl-auto: none
   flyway:
@@ -9,23 +15,23 @@ spring:
     locations:
       - classpath:db/migration
       - classpath:db/migration/mysql
-    validate-on-migrate: true
+    clean-disabled: false
 
 oauth:
   google:
     base-uri: 'https://oauth2.googleapis.com'
     token-info-uri: '/tokeninfo'
-    client-id: ${GOOGLE_CLIENT_ID}
+    client-id: 'this-is-client-id'
     connect-timeout: 180s # 3분
     read-timeout: 180s
 
 security:
   token:
     access-token:
-      secret-key: ${ACCESS_TOKEN_SECRET_KEY}
+      secret-key: this-is-secret-key
       expires-in: 900      # 15분 (초)
     refresh-token:
-      secret-key: ${REFRESH_TOKEN_SECRET_KEY}
+      secret-key: this-is-secret-key
       expires-in: 1209600  # 14일 (초)
 
 api:
@@ -34,27 +40,3 @@ api:
     connect-timeout: 5s
     read-timeout: 30s
     content-type: application/x-www-form-urlencoded; charset=UTF-8
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: health
-
----
-spring:
-  config:
-    activate:
-      on-profile: local
-
----
-spring:
-  config:
-    activate:
-      on-profile: dev
-
----
-spring:
-  config:
-    activate:
-      on-profile: prod
