--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -4,6 +4,13 @@ spring:
     url: ${DB_URL}
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
+springdoc:
+  api-docs:
+    path: /api-docs
+  swagger-ui:
+    servers:
+      - name: dev
+        url: http://dev.yagubogu.com
 
   sql:
     init:
