--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -5,6 +5,14 @@ spring:
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
 
+springdoc:
+  api-docs:
+    path: /api-docs
+  swagger-ui:
+    servers:
+      - name: dev
+        url: http://dev.yagubogu.com
+
   sql:
     init:
       mode: never
