--- a/backend/src/main/resources/application-local.yml
+++ b/backend/src/main/resources/application-local.yml
@@ -7,7 +7,7 @@ spring:
 
   sql:
     init:
-      mode: always
+      mode: never
 
   jpa:
     show-sql: true
@@ -15,6 +15,6 @@ spring:
       hibernate:
         format_sql: true
         dialect: org.hibernate.dialect.MySQLDialect
-    hibernate:
-      ddl-auto: create
-    defer-datasource-initialization: true
+#    hibernate:
+#      ddl-auto: none
+#    defer-datasource-initialization: true
