--- a/backend/src/test/resources/application.yml
+++ b/backend/src/test/resources/application.yml
@@ -1,46 +1,17 @@
 spring:
-  datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:database;
-    username: sa
-    password:
-  sql:
-    init:
-      mode: always
-      data-locations: classpath:test-data-team-stadium.sql
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
-  jpa:
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-    hibernate:
-      ddl-auto: create-drop
-    defer-datasource-initialization: true
+  profiles:
+    active: integration
+  flyway:
+    enabled: false
 
-oauth:
-  google:
-    base-uri: 'https://oauth2.googleapis.com'
-    token-info-uri: '/tokeninfo'
-    client-id: 'this-is-client-id'
-    connect-timeout: 180s # 3분
-    read-timeout: 180s
+---
+spring:
+  config:
+    activate:
+      on-profile: e2e
 
-security:
-  token:
-    access-token:
-      secret-key: this-is-secret-key
-      expires-in: 900      # 15분 (초)
-    refresh-token:
-      secret-key: this-is-secret-key
-      expires-in: 1209600  # 14일 (초)
-
-api:
-  kbo:
-    base-url: https://www.koreabaseball.com/ws
-    connect-timeout: 5s
-    read-timeout: 30s
-    content-type: application/x-www-form-urlencoded; charset=UTF-8
+---
+spring:
+  config:
+    activate:
+      on-profile: integration
