chore: 배포 테스트를 위한 타겟 브랜치 변경

--- a/.github/workflows/backend-dev.yml
+++ b/.github/workflows/backend-dev.yml
@@ -2,9 +2,10 @@ name: YaguBogu Backend Dev
 
 on:
   push:
-    branches: [ "dev" ]
+    branches: [ "fix/469" ]
     paths:
       - "backend/**"
+      - ".github/workflows/**"
   workflow_dispatch:
 
 env:
