chore: 타겟 브랜치 원상복구

--- a/.github/workflows/backend-dev.yml
+++ b/.github/workflows/backend-dev.yml
@@ -2,7 +2,7 @@ name: YaguBogu Backend Dev
 
 on:
   push:
-    branches: [ "fix/469" ]
+    branches: [ "dev" ]
     paths:
       - "backend/**"
       - ".github/workflows/**"
