--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -35,8 +35,8 @@ dependencies {
     implementation 'com.auth0:java-jwt:4.4.0'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-log4j2'
-//    implementation 'org.flywaydb:flyway-core:10.20.1'
     implementation 'org.flywaydb:flyway-mysql:10.20.1'
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
 
     compileOnly 'org.projectlombok:lombok'
 
@@ -45,6 +45,9 @@ dependencies {
 
     annotationProcessor 'org.projectlombok:lombok'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
+    annotationProcessor 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+    annotationProcessor 'jakarta.annotation:jakarta.annotation-api:2.1.1'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.rest-assured:rest-assured:5.3.1'
@@ -54,6 +57,16 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
+def generated = 'src/main/generated'
+
+tasks.withType(JavaCompile).configureEach {
+    options.getGeneratedSourceOutputDirectory().set(file(generated))
+}
+
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+clean {
+    delete file(generated)
 }
