feat: sse 25초 간격으로 heartbeat 추가

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -41,6 +41,11 @@ management:
       exposure:
         include: health
 
+sse:
+  heartbeat:
+    enabled: true
+    interval-ms: 25000
+
 ---
 spring:
   config:
