--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -18,6 +18,14 @@ spring:
   lifecycle:
     timeout-per-shutdown-phase: 30s
 
+  flyway:
+    enabled: true
+    locations:
+      - classpath:db/migration
+      - classpath:db/migration/mysql
+    validate-on-migrate: true
+    clean-disabled: true
+
 springdoc:
   api-docs:
     path: /api-docs
