--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -4,12 +4,9 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none
+
   flyway:
-    enabled: true
-    locations:
-      - classpath:db/migration
-      - classpath:db/migration/mysql
-    validate-on-migrate: true
+    enabled: false
 
 oauth:
   google:
