--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -5,18 +5,14 @@ spring:
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
 
-  sql:
-    init:
-      mode: never
-
   jpa:
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQLDialect
     hibernate:
       ddl-auto: validate
   lifecycle:
     timeout-per-shutdown-phase: 30s
+
+  flyway:
+    enabled: true
 
 springdoc:
   api-docs:
