--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,11 +1,20 @@
 spring:
   profiles:
     active: local
+
   jpa:
     hibernate:
       ddl-auto: none
+    open-in-view: false
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
+
+  sql:
+    init:
+      mode: never
+
   flyway:
-    enabled: true
     locations:
       - classpath:db/migration
       - classpath:db/migration/mysql
@@ -16,7 +25,7 @@ oauth:
     base-uri: 'https://oauth2.googleapis.com'
     token-info-uri: '/tokeninfo'
     client-id: ${GOOGLE_CLIENT_ID}
-    connect-timeout: 180s # 3분
+    connect-timeout: 180s
     read-timeout: 180s
 
 security:
