feat: 승리요정 랭킹 베이즈 정리로 구현, 팀 별 필터링 추가 (#518)
* feat: QueryDsl 도입

* fix: 버그 수정

* chore: flyway 로컬 무효화

* feat: 승요 랭킹 베이즈 평균 파라미터 계산

* feat: 승요 랭킹 구현

* feat: 승리 요정 랭킹 쿼리 기능 구현

* fix: 행별 값을 집계하도록 수정

* fix: 승요 랭킹 취소된 경기를 집계하는 문제 해결

* feat: 승요 점수 응답에 포함하도록 수정

* fix: 탈퇴한 회원 조회되지 않도록 수정

* fix: 승률 무승부 반영 제거

* docs: 주석 추가

* refactor: 변수 추출

* fix: team join하도록 수정

* refactor: interface에 final 일관적으로 삭제

* refactor: 상수 분리

* refactor: 파라미터 제거

* format: 포맷팅 수정

* test: static import 사용

* refactor: import문 추가, nickname 수정

* style: 코드 컨밴션

---------

Co-authored-by: juno <wnsgh732@gmail.com>

--- a/backend/src/main/resources/application-local.yml
+++ b/backend/src/main/resources/application-local.yml
@@ -15,6 +15,8 @@ spring:
       hibernate:
         format_sql: true
         dialect: org.hibernate.dialect.MySQLDialect
+    hibernate:
+      ddl-auto: create-drop
 
   flyway:
     enabled: true
