chore: prometheus endpoint 추가

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -69,7 +69,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: health, metrics
+        include: health, prometheus
 
 sse:
   heartbeat:
