chore: 지표 위치 prod로 이동

--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -19,6 +19,12 @@ spring:
   flyway:
     enabled: true
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, prometheus
+
 springdoc:
   api-docs:
     path: /api-docs
