chore: micrometer 의존성 추가

--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -25,6 +25,11 @@ management:
       exposure:
         include: health, prometheus
 
+  metrics:
+    tags:
+      app: yagubogu
+      env: prod
+
 springdoc:
   api-docs:
     path: /api-docs
