--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-log4j2'
     implementation 'org.flywaydb:flyway-mysql:10.20.1'
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
 
     compileOnly 'org.projectlombok:lombok'
 
