--- a/backend/src/test/resources/application.yml
+++ b/backend/src/test/resources/application.yml
@@ -32,6 +32,11 @@ sse:
   heartbeat:
     enabled: true
     interval-ms: 25000
+
+app:
+  s3:
+    bucket: techcourse-project-2025
+    
 ---
 spring:
   config:
