--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -67,11 +67,11 @@ api:
 
 kbo:
   crawler:
-    navigation-timeout: 30s     # 최초 페이지 진입
-    table-timeout: 15s          # 특정 요소/테이블 대기
-    wait-timeout: 20s           # Ajax/부분갱신 포함 종합 대기
-    max-retries: 2
-    retry-delay: 2s
+    navigation-timeout: 15s
+    table-timeout: 6s
+    wait-timeout: 8s
+    max-retries: 1
+    retry-delay: 1s
 
     # 셀렉터
     date-field-selector: "#cphContents_cphContents_cphContents_hfSearchDate"
