feat: 목표 slo 정하기 위한 계측 구현

--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -20,12 +20,13 @@ spring:
     enabled: true
 
 management:
-  endpoints:
-    web:
-      exposure:
-        include: health, prometheus
-
+  endpoints.web.exposure.include: health,metrics,prometheus
   metrics:
+    distribution:
+      percentiles:
+        all: 0.5,0.9,0.95,0.99
+      percentiles-histogram:
+        http.server.requests: true
     tags:
       app: yagubogu
       env: prod
