--- a/backend/src/main/resources/application-local.yml
+++ b/backend/src/main/resources/application-local.yml
@@ -21,3 +21,16 @@ spring:
 
   flyway:
     enabled: false
+
+management:
+  endpoints.web.exposure.include: health,metrics,prometheus
+  metrics.distribution:
+    percentiles:
+      all: 0.5,0.9,0.95,0.99
+    percentiles-histogram:
+      http.server.requests: true
+
+decorator:
+  datasource:
+    p6spy:
+      enable-logging: true
