chore: 크롤링 대기 시간 개선

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -67,11 +67,11 @@ api:
 
 kbo:
   crawler:
-    navigation-timeout: 15s
-    table-timeout: 6s
-    wait-timeout: 8s
+    navigation-timeout: 7s
+    table-timeout: 3s
+    wait-timeout: 3s
     max-retries: 1
-    retry-delay: 1s
+    retry-delay: 500ms
     context-pool-size: 2
 
     # 셀렉터
