test: mysql Container를 이용한 통합 테스트 base class 구현

--- a/backend/src/test/resources/application.yml
+++ b/backend/src/test/resources/application.yml
@@ -43,3 +43,9 @@ spring:
   config:
     activate:
       on-profile: integration
+
+---
+spring:
+  config:
+    activate:
+      on-profile: integration-mysql
