chore: workflow에 환경 변수 추가

--- a/.github/workflows/backend-rollback-main.yml
+++ b/.github/workflows/backend-rollback-main.yml
@@ -101,6 +101,7 @@ jobs:
             -e GOOGLE_CLIENT_ID="${{ secrets.GOOGLE_CLIENT_ID }}" \
             -e ACCESS_TOKEN_SECRET_KEY="${{ secrets.ACCESS_TOKEN_SECRET_KEY }}" \
             -e REFRESH_TOKEN_SECRET_KEY="${{ secrets.REFRESH_TOKEN_SECRET_KEY }}" \
+            -e MONITORING_SERVER_URL="${{ secrets.MONITORING_SERVER_URL }}" \
             -l app=yagubogu-backend \
             -l release.version="$VER" \
             -l release.digest="$DIGEST" \
