chore: baseUrl 환경 변수 설정

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -67,6 +67,7 @@ api:
 
 kbo:
   crawler:
+    base-url: https://www.koreabaseball.com/Schedule/ScoreBoard.aspx
     navigation-timeout: 7s
     table-timeout: 3s
     wait-timeout: 3s
