feat: PlayWright를 이용한 동적 웹 크롤링 구현 (#647)
* feat: 경기 일정 조회 구현

* feat: 과거 데이터 지원을 위한 팀, 경기장 데이터 추가

* feat: 경기 결과 저장을 위한 api 구현

* refactor: 메모리가 아닌 db에서 조회하도록 수정

* feat: 팀별 승률 조회 크롤링 기능 구현

* feat: 스코어보드 조회 크롤링 구현

* feat: 날짜 범위로 스코어보드 저장 기능 구현

* chore: 타임아웃 설정 수정

* refactor: 웹 크롤링으로 스케줄링 수정

* feat: 목표 slo 정하기 위한 계측 구현

* feat: 크롤링 속도 개선

* chore: 구장 데이터 추가

* chore: 크롤링 대기 시간 개선

* feat: 날짜를 범위로 조회할 경우 한번에 조회하도록 수정

* fix: 점수가 null일 경우 파싱 예외 처리

* feat: jdbc batch 처리하여 속도 개선

* feat: 쿼리 성능 측정을 위한 StopWatch 제거

* chore: pool size 설정값 추가

* feat: 에러 레벨 수정

* test: mock 데이터 수정

* test: var 제거

* fix: Crawler 레벨 synchronized 추가

- bulk insert용 api와 cron job이 겹칠 경우 동기 처리한다.

* feat: chunk별 트랜잭션 커밋 구현

* fix: TransactionTemplate 빈 중복 등록 문제 해결

* feat: Crawler api를 admin 권한으로 설정

* refactor: dto 클래스로 분리

* delete: 팀 순위 크롤링 코드 제거

* refactor: @Timed 코드 제거

* feat: 크롤링 조회 코드 반환값 제거

* delete: 단일 스코어보드 조회 api 삭제

* refactor: static import 수행

* docs: 스코어보드 범위 api 설명 수정

* feat: doubleHeaderGameOrder 기본값 0으로 설정

* style: static import 설정

* feat: 예외 수정

* refactor: 공백 제거 및 리팩토링

* chore: baseUrl 환경 변수 설정

* docs: 로깅 중복되지 않도록 수정

* style: 개행 추가

* refactor: 스케줄러 코드 수정

- 취소되는 경기가 크롤링될때까지 이전 코드를 유지한다.

* chore: application-prod.yml 수정

* refactor: GameSyncException로 변경

* chore: metric 설정 제거

* chore: yml 설정 제거

--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -20,11 +20,7 @@ spring:
     enabled: true
 
 management:
-  endpoints:
-    web:
-      exposure:
-        include: health, prometheus
-
+  endpoints.web.exposure.include: health, metrics, prometheus
   metrics:
     tags:
       app: yagubogu
