feat: 워크플로우 속도 최적화
- 테스트 amd 환경에서 빌드
- Dockerfile 의존성 레이어 분리

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,13 +8,12 @@ COPY gradle gradle
 COPY build.gradle settings.gradle ./
 # 소스는 마지막에 복사 (캐시 활용)
 RUN sed -i 's/\r$//' gradlew && chmod +x gradlew
+RUN ./gradlew --no-daemon dependencies || true
+
 COPY src src
 
-# Gradle 8.14.3 보장 (wrapper 버전 확인)
-# RUN ./gradlew wrapper --gradle-version 8.14.3 --no-daemon
-
 # 빌드
-RUN ./gradlew clean bootJar --no-daemon
+RUN ./gradlew --no-daemon --build-cache bootJar -x test
 
 # --- Run stage ---
 FROM amazoncorretto:21-alpine
