fix: dev 워크플로우 정상화, r_seed_lookup 정상화

--- a/.github/workflows/backend-dev.yml
+++ b/.github/workflows/backend-dev.yml
@@ -70,7 +70,7 @@ jobs:
           .
 
   cd:
-    needs: ci
+    needs: build
     runs-on: [ self-hosted, develop ]
     env:
       IMAGE: yagubogu/yagubogu-backend
