feat: 프로필 사진 수정 기능 추가 (#648)
* feat: presigned url 생성 기능 추가

* feat: s3 컨트롤러 매개변수 타입 수정, key 경로 수정(yagubogu추가)

* test: test application.yml에 app.s3.bucket 경로 추가

* feat: profile -> profiles 객체 경로 변경

* feat: complete api 구현

* feat: presigned url 발급 기능 추가

* feat: contentLength 업로드 제약 추가

* feat: complete end point 추가

* feat: completeUpload 메서드에 프로필 사진 수정 기능 추가

* feat: complete 메서드가 생성된 url에서 객체 url을 반환하도록 수정

* chore: 테스트용 워크플로우 제거

* feat: 환경 변수 주입 방식 변경

* test: e2e테스트 작성

* feat: api 명세 수정

* feat: profileImageServiceTest 추가

* feat: 워크플로우 트리거 추가

* feat: dev 프로파일에 actuator endpoint 추가

* test: aws 환경변수 yml로 분리

* style: 개행 제거, static import 사용

* delete: 이미지 qa용 워크플로우 제거

* feat: presign expiration을 설정값에 주입

* refactor: 컨트롤러 메서드 네이밍 수정

* feat: content type "image/jpeg"로 한정

* feat: 외부 api 트랜잭션 분리

* refactor: final 추가

* feat: static import 추가

* refactor: 예외 메세지 컨벤션 수정

* refactor: 어노테이션 순서 수정

* refactor: 허용 크기 도메인 상수로 분리

* feat: presigned url 경로 수정

* fix: 테스트 수정

* feat: playwright 레이어 삭제

* test: presigned url 경로 테스트 수정

---------

Co-authored-by: nourzoo <tmddus4671@gmail.com>

--- a/backend/src/test/resources/application.yml
+++ b/backend/src/test/resources/application.yml
@@ -54,6 +54,12 @@ sse:
   heartbeat:
     enabled: true
     interval-ms: 25000
+
+app:
+  s3:
+    bucket: techcourse-project-2025
+    presign-expiration: 10m
+
 ---
 spring:
   config:
