--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'org.flywaydb:flyway-mysql:10.20.1'
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
     implementation 'io.micrometer:micrometer-registry-prometheus'
+    implementation 'software.amazon.awssdk:s3:2.34.8'
 
     compileOnly 'org.projectlombok:lombok'
 
