--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -93,6 +93,11 @@ sse:
     enabled: true
     interval-ms: 25000
 
+app:
+  s3:
+    bucket: techcourse-project-2025
+    presign-expiration: 10
+
 ---
 spring:
   config:
