refactor: Presigned 관련 네이밍 수정

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -55,8 +55,7 @@
 
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
-            android:exported="false"
-            tools:ignore="LockedOrientationActivity" />
+            android:exported="false" />
     </application>
 
 </manifest>
