--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       DB_URL: ${DB_URL}
       DB_USERNAME: ${DB_USERNAME}
       DB_PASSWORD: ${DB_PASSWORD}
+      MONITORING_SERVER_IP: ${MONITORING_SERVER_IP}
       GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
       ACCESS_TOKEN_SECRET_KEY: ${ACCESS_TOKEN_SECRET_KEY}
       REFRESH_TOKEN_SECRET_KEY: ${REFRESH_TOKEN_SECRET_KEY}
