chore: 불필요한 metrics 엔드포인트 제거

--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -27,7 +27,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: prometheus,health,metrics
+        include: prometheus, health
   tracing:
     sampling:
       probability: 0.2
