--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -30,7 +30,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: prometheus,health,metrics
+        include: prometheus, health
   tracing:
     sampling:
       probability: 0.2
