chore: prometheus p99,95 설정 및 trace 설정 추가 (#718)
* chore: p99, 95 설정 추가

* chore: trace 설정 추가

* chore: 불필요한 metrics 엔드포인트 제거

* chore: probability 0.2 -> 0.1로 수정

--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -20,11 +20,23 @@ spring:
     enabled: true
 
 management:
-  endpoints.web.exposure.include: health, metrics, prometheus
   metrics:
+    distribution:
+      percentiles-histogram:
+        http.server.requests: true
     tags:
       app: yagubogu
       env: prod
+  endpoints:
+    web:
+      exposure:
+        include: prometheus, health
+  tracing:
+    sampling:
+      probability: 0.2
+  otlp:
+    tracing:
+      endpoint: http://${MONITORING_SERVER_IP}:4317
 
 springdoc:
   api-docs:
