--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -17,12 +17,20 @@ spring:
     enabled: true
 
 management:
-  endpoints:
-    web:
-      exposure:
-        include: health, prometheus
-
   metrics:
+    distribution:
+      percentiles-histogram:
+        http.server.requests: true
     tags:
       app: yagubogu
       env: prod
+  endpoints:
+    web:
+      exposure:
+        include: prometheus, health
+  tracing:
+    sampling:
+      probability: 0.1
+  otlp:
+    tracing:
+      endpoint: http://${MONITORING_SERVER_IP}:4317
