chore: load test용 워크플로우 생성

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -114,4 +114,10 @@ spring:
 spring:
   config:
     activate:
+      on-profile: k6
+
+---
+spring:
+  config:
+    activate:
       on-profile: prod
